--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -2,9 +2,15 @@
   <div class="col-12">
     <div class="container">
       <div id="about">
-        <h2>About</h2>
-        <p>I'm ....</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="https://media-exp1.licdn.com/dms/image/C4D03AQG192-NR9CWgQ/profile-displayphoto-shrink_800_800/0/1652787796275?e=1675900800&v=beta&t=NvFxoTE4HcboBpdSzuAhNqAg5ZyAnIyboPHXhqKPug4" alt="profile">
+              <h1>Hi,I'm Ayhem Chelly</h1>
+              <h2>I'm a full stack Web Developer.</h2>
+              <p>Based in Tokyo,Japan</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
