--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,5 @@
 <div class="row justify-content-center banner">
-  <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+  <div class="col-12 d-flex flex-column justify-content-center align-items-inherit h-100">
+    <%= image_tag 'https://i.ibb.co/9wQS2HR/me.jpg', alt: "profile photo", class: 'avatar' %>
   </div>
 </div>
