--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -1,18 +1,19 @@
 <div class="row my-5">
   <div class="col-12">
     <div id="contact">
+      <h2 class="text-center">Contact</h2>
       <div class="d-flex justify-content-center flex-wrap">
         <div class="button-social d-flex flex-column justify-content-center align-items-center">
           <i class="fa-solid fa-envelope"></i>
-          <%= mail_to "douglasmberkley@gmail.com", "", class: 'button-social-link' %>
+          <%= mail_to "aihamchelly@gmail.com", "", class: 'button-social-link' %>
         </div>
         <div class="button-social d-flex flex-column justify-content-center align-items-center">
           <i class="fa-brands fa-github"></i>
-          <%= link_to "", "https://github.com/", target: '_blank', class: 'button-social-link' %>
+          <%= link_to "", "https://github.com/41future", target: '_blank', class: 'button-social-link' %>
         </div>
         <div class="button-social d-flex flex-column justify-content-center align-items-center">
           <i class="fa-brands fa-linkedin"></i>
-          <%= link_to "", "https://www.linkedin.com", target: '_blank', class: 'button-social-link' %>
+          <%= link_to "", "https://www.linkedin.com/in/al5311245/", target: '_blank', class: 'button-social-link' %>
         </div>
       </div>
     </div>
