--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+body {
+  background-image: url("https://i.ibb.co/d7fS2gw/premi.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  padding-bottom: 50px;
+  color: #fff;
+}
