--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,4 +9,6 @@
   <%= partial 'partials/projects' %>
   <!-- Social Links Section -->
   <%= partial 'partials/social' %>
+  <!-- Social footer Section -->
+  <%= partial 'partials/footer' %>
 </div>
